[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enchentes-jf"
version = "1.0.0"
dependencies = [
    "streamlit==1.31.0",
    "pandas==2.2.0",
    "numpy==1.26.3",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "feedparser==6.0.10",
    "Pillow==10.1.0",
    "setuptools==69.0.3",
    "wheel==0.42.0",
]
